@@ -1,7 +1,9 @@
 DIST qmidiarp-0.5.1.tar.bz2 282769 SHA256 48cee08aa91446c0afcedffec14027b4d3873af0ae060f74c48772f8b580b49e SHA512 acf35d3568db7a2fd8526125c0d254f2bd4109d9b46e61ae99e037d57a66f19560d2e68b96876a0eef7ffd721b22b2cf7e290b67da90d7b6cbcfa33fc344a7f1 WHIRLPOOL 6e9666d8e8189198be81152562d4d2df9a6b6ce5844640cb8556fe4440124717aed3b068a07ba15e9b4a2e2713fd94d07c53655798250ccac1a7b9cefafc097a
 DIST qmidiarp-0.5.2.tar.bz2 376217 SHA256 b2fb4457b756b5653b984c80d05f93ed146e1b12362d903b2b0499407e184567 SHA512 f52db0363a93e781229ce518553b9e6a7d93b9fab6a18d153ed9b2ef21603947c6e857dcccee71cefd8fdee587b313f43ea1050fc365cb627559905355474880 WHIRLPOOL 4fd67d7c6fb941ee2383fb59312719e98be9de33f6faf980321da4bfe0a3b11575f3425152f5cb05314e28a54197342ad719adc37cefabc76c0585654ce934f3
+DIST qmidiarp-0.5.3.tar.bz2 378203 SHA256 fdd4a2c34c244b0fabc3a6a273b4138958899441a908fe3b271efd8cf147850a SHA512 a90b4154a52065b6274f9788713a8208d1ec0a3be87ced2d46c573fddbea0f0e38e52c31cc250b94f24ed9486bc6546f4007e4acd42d1b732f715f1a2647a51f WHIRLPOOL 136a06508051004afd667aa253a1d1a7841750162685d2a0fe1bb605f0ab471e93493ece9a0c55a44ef064cfade5bc915c205964afb58cdf09a7f81ab9cac35c
 EBUILD qmidiarp-0.5.1.ebuild 528 SHA256 1b7ac8a46a0fda422d07e80787100015e8285d9d8bf7e2baa491d86c59e56bdb SHA512 86489c7780b2d86b1f00561472c1986a125401fc78ab8f6b2f8713168413657d07e6189395f8854da768ef5bdc2570ab8b2f749e04a451f5f5b12fb06a59bd7c WHIRLPOOL 63042aaed1204fc15e1dc305c9042cc71cc5423cfdb3d5f7b068043d8d7d5c024fb33b927c1aa2d0e96ff82f99ee0496eb267684c312fef7931514baf1348698
 EBUILD qmidiarp-0.5.2.ebuild 887 SHA256 8ca8f9db8054753206dd97f841e290017495ec5113f7573bcc08b3e930a2d4aa SHA512 075556957923c3672cf17edb8ba4f4483e64da802b18378e9bc01bab9316570f168e4cf3cf8f225a0cd9324d302a5e18186f1c0c54a483385d277666a43b6fe1 WHIRLPOOL 70a672eebc0f7eb9f049f42e5da341429e85ea60957f3cc827e5a0debe44712cc73728ddf3d3bade23f155018ad3513c23b393c597a54d85dba5240a6ea9e2d7
-EBUILD qmidiarp-9999.ebuild 936 SHA256 27fd3c6a277984fb9a5c42920e39d2acea1b1c5c3757c13a04124b39276f7a0d SHA512 387cdce0c9633669543a5c16bb4725a1cc317b3541882505371356f3940c3697632d485bdbde0058e75277b36cba9e01b84135203b542a40b30e71a59ca82a69 WHIRLPOOL 5e9b6df7b282dd84d3d1a8c7df24f9dbe9c17125fee135debe457d141342f389afcb3f2a8147d5ace4389f1c7d51bd2fb84e7b437ba6bbff154b885c2ab474ee
-MISC ChangeLog 891 SHA256 57478fac576f785a187b6cd701b79985e6ba164880c61293705e199736ef4d23 SHA512 c9bb71cbbc9ba461228823f8d7053a349f87211660be67ba17a36f75f511dcd8bb96c4861e906310f5c83666173b4014a1d4585bd7a514299903407a411dce11 WHIRLPOOL d06c17d6daeda50f3bbb27797ae904845ad18e0304956bc774d4a096ac76dfae533d46af5f46f549d54f343cc2d5f1ce277fe66c0ad5b726e41293daf9405e08
-MISC metadata.xml 460 SHA256 1863988dbf1badb77dcc71c6031afb7a45613a48c5e71df65e82fe610966dae3 SHA512 57fd336364557413c2893bcf70a3830fe2d0e9861fe4f97b4b7674728a9696dc4edc5ef69fe26bedf1aedaf40c3767e57ef902579ecd1b69797c7808866f4bd7 WHIRLPOOL 347c4258429a28d427dd0aeba434832abc43b6c8c44fc5a9a6d215e7392a384482330d3143b60fbecceded70733d26b316f8142f28951c6fce5230ce01384a2e
+EBUILD qmidiarp-0.5.3.ebuild 945 SHA256 b8a005d647a159bf09948d78ba4a4bf528bdf67bf30e3033b16a8b55efd1594b SHA512 97e1b759ed4e70527a87f8def6b0d8a219f24f2e413410b6ebdb789120af99fd20e50601c89d4cfe793132e17cab86a0b87cfea68dcc7238f03f2fa87c519a3a WHIRLPOOL 42b9835d217931c16e266b4383da9fbb071522ac23359f9dc1bbf372f3a41ef1091d16a754e6e37c1b73cc0d77078355957f6320ad32aa284f92df6cc0b98c0c
+EBUILD qmidiarp-9999.ebuild 994 SHA256 3cacfad08f3feb96965086c0d9f539a296c0b44b2874114fcc892e7d186c69b8 SHA512 8afa0bc6ea0d35de3dcf1e37197729a005c9cd1e453a00804ce7d8f2db1ae9da50878ac299d2c6dd2e5f0a064863a8c0bb720afecdba3df9d6c8e6f7ef2f6f48 WHIRLPOOL db8ca96877aef0183a75d283c6471413349d4a448c479ddb8c3576397445153cf323ba52d2d7fd8b019e7f6956cfd8f53a228650b10d54ad41913f475578dfad
+MISC ChangeLog 1086 SHA256 6cfc1a7388ed81a7f1238b3c0ef3341e263ebff6ddafdba01401f1557fa5dafa SHA512 7e7bd4621037c89c3495631510d142328bbc1c38ceabb4a705fa455e94140423f1084d40476d28e5a7383e2707a9d53ed8d88564ff1d08404da6ce171ba6b094 WHIRLPOOL ee3296fe8c2c8912f5334f29eee9b9ce316847a44b3f6b474d2b2d8250cca8b029715918210828e994498a890c9a5db16a70c4fe987544301248d1fab6e2a23b
+MISC metadata.xml 543 SHA256 34cf8ddfeddb9dd893d5c808e40f922f6ff23bea02f802ee9c11c2a796d68291 SHA512 60e0d35dbf578374d92efdbd561f1827a971853fd0641337725129789b3a2b0f9db72da2b5477c7c8e03b77d5464d070039782728d7a7dea2ed11eebc21b17e0 WHIRLPOOL 96bf487d6b129442d19a546f5c8f3fc2befe8a15d234ab3d6f3b93fb7064c67d1c09dff9598044d54cb25af5b4ca9d51d0d3e7e5fe8d0439973f952b50b6d844
