@@ -5,23 +5,22 @@
 EAPI="5"
 
 AUTOTOOLS_IN_SOURCE_BUILD="1"
-AUTOTOOLS_AUTORECONF="1"
-inherit autotools-utils git-2
+inherit autotools-utils
 
 DESCRIPTION="An arpeggiator, sequencer and MIDI LFO for ALSA and JACK"
 HOMEPAGE="http://qmidiarp.sourceforge.net/"
-SRC_URI=""
-EGIT_REPO_URI="git://${PN}.git.sourceforge.net/gitroot/${PN}/${PN}"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
+RESTRICT="mirror"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE="doc nsm"
 
 RDEPEND=">=dev-qt/qtcore-4.2:4
 	>=dev-qt/qtgui-4.2:4
-	>=media-sound/jack-audio-connection-kit-0.103.0
-	>=media-libs/alsa-lib-0.9.0
+	media-libs/alsa-lib
+	media-sound/jack-audio-connection-kit
 	nsm? ( >=media-libs/liblo-0.26 )"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig
