@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qmidiarp-0.5.3 (26 Nov 2013)
+
+  26 Nov 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +qmidiarp-0.5.3.ebuild, qmidiarp-9999.ebuild, metadata.xml:
+  Version bump.
+  Add nsm USE flag.
+
 *qmidiarp-0.5.2 (09 May 2013)
 
   09 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
